# gl

./: .gitignore  CMakeLists.txt  demo0.cpp  demo1.cpp  main.cpp
glad/: CMakeLists.txt
glm/doc/: man.doxy
glm/doc/api/: a00031_source.html  a00101_source.html  a00148.html
glsl/: frag0.glsl  frag1.glsl  vert0.glsl  vert1.glsl
include/: camera.hpp  data_base.hpp  shader.hpp  texture.hpp  vertex.hpp  window.hpp
src/: camera.cpp  data_base.cpp  shader.cpp  texture.cpp  vertex.cpp  window.cpp
